fix after Java 25 upgrade