@@ -3,7 +3,6 @@ package com.clerk.register.controllers;
 import com.clerk.register.data.requests.DeleteItemRequest;
 import com.clerk.register.data.requests.ProductImageRequest;
 import com.clerk.register.models.Product;
-import com.clerk.register.repositories.ProductRepository;
 import com.clerk.register.services.ProductService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -12,6 +11,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.List;
 
@@ -21,11 +21,11 @@ public class ProductController {
 
     Logger logger = LoggerFactory.getLogger(ProductController.class);
 
-    @Autowired
-    private ProductRepository productRepository;
+    private final ProductService productService;
 
-    @Autowired
-    private ProductService productService;
+    public ProductController(ProductService productService) {
+        this.productService = productService;
+    }
 
     @PostMapping("/")
     public Product createProduct(@RequestBody Product product) {
@@ -39,27 +39,27 @@ public class ProductController {
 
     @GetMapping(path = "/{id}")
     public Product getProductById(@PathVariable("id") Long id) {
-        return productRepository.findById(id).orElse(null);
+        return productService.getProductById(id);
     }
 
     @PatchMapping(path = "/")
     public Product updateProduct(@RequestBody Product product) {
-        return productRepository.save(product);
+        return productService.updateProduct(product);
     }
 
     @DeleteMapping(path = "/")
     public ResponseEntity<String> deleteProduct(@RequestBody DeleteItemRequest request) {
-        productRepository.deleteById(request.id);
+        productService.deleteProduct(request.id);
         return ResponseEntity.ok("Deleted");
     }
 
     @PostMapping("/fetch/image")
-    public ResponseEntity<String> uploadImage(@RequestBody ProductImageRequest request) {
+    public ResponseEntity uploadImage(@RequestBody ProductImageRequest request) {
         if (request.url != null) {
             try {
-                URL url = new URL(request.url);
+                URL url = new URI(request.url).toURL();
 
-                logger.info("Calling " + request.url);
+                logger.info("Calling {}", request.url);
 
                 HttpURLConnection connection = (HttpURLConnection) url.openConnection();
                 connection.setRequestMethod("GET");
@@ -70,11 +70,11 @@ public class ProductController {
                 logger.info("Response status code " + connection.getResponseCode());
 
                 if (connection.getResponseCode() == 200) {
-                    Product product = productRepository.findById(request.productId).orElse(null);
+                    Product product = productService.getProductById(request.productId);
 
                     if (product != null) {
                         product.setImageURL(request.url);
-                        productRepository.save(product);
+                        productService.updateProduct(product);
 
                         return ResponseEntity.status(200).body("OK");
                     }
